# sigil-gumbo

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.txt  Makefile.am
examples/: prettyprint.cc  serialize.cc  well_formed.cc
python/gumbo/: bs4_adapter.py  gumboc.py  gumboc_tags.py
src/: CMakeLists.txt  char_ref.rl  error.c  gumbo.h  gumbo_edit.c  parser.c  replacement.h  tag.c  tag_enum.h  tag_perf.h  tag_sizes.h  tag_strings.h  tokenizer.c
tests/: parser.cc  tokenizer.cc
